# l2dm-solver

./: .gitignore
lib/notes/: 00-em-heat-theory.md
lib/notes/00-init/: 00-em-heat-theory.md
lib/notes/01-heat/: The_heat_conduction_equation_graphene_substrate_EN.md  The_heat_conduction_equation_graphene_substrate_RU.md
reports/260528/: report-part1.md
thermal/: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
thermal/artifacts/inspect/: _conventions.md
thermal/docs/: architecture.md  inspector.md  open-questions.md  physics.md  verification.md
thermal/docs/derivations/: algebraic-verification.md
thermal/docs/submissions/: 0001-problem-1.md  0002-algebraic-verification.md  0003-problem-2.md  0004-harness-l2-norm.md  0006-problem-3.md  0007-problem-5.md  0008-problem-4.md  _conventions.md
thermal/scripts/: diagnose.py  inspect.py
thermal/src/geometry/: __init__.py  cache.py  disk_in_disk.py  l_shape.py  rectangle_split.py  two_disks_in_disk.py  unit_square.py
thermal/src/harness/: __init__.py  artifacts.py  norms.py  study.py
thermal/src/problems/: __init__.py  problem_01_manufactured.py  problem_02_slab.py  problem_03_disk.py  problem_04_two_disks.py  problem_05_lshape.py  protocol.py
thermal/src/solver/: __init__.py  result.py  solve_scalar.py
thermal/tests/: conftest.py  test_artifacts.py  test_norms.py  test_problem_01.py  test_problem_02.py  test_problem_03.py  test_problem_04.py  test_problem_05.py  test_solver_guards.py
