[project]
name = "thermal"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "gmsh>=4.13",
    "matplotlib>=3.9",
    "meshio>=5.3",
    "numpy>=2.0",
    "scikit-fem>=12.0",
    "scipy>=1.14",
]

[dependency-groups]
dev = [
    "black>=24.0",
    "pytest>=8.0",
    "pytest-xdist>=3.8.0",
]

[tool.pytest.ini_options]
# Default-on INFO logs so the per-level error table and fitted rates land in
# the pytest output without per-invocation flags. Override per-run with
# `--log-cli-level=WARNING` to quiet.
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(levelname)-7s %(name)s :: %(message)s"
# Parallelise by default via pytest-xdist. The dominant cost in the suite is
# the Problem-4 sweep — 7+ direct sparse solves on a 260k-dof mesh — and its
# tests are independent, so wall-clock drops roughly to the slowest test.
# The mesh cache is on-disk and content-addressed; concurrent workers writing
# the same .msh is at worst a one-time duplicated build, never corruption,
# because cached_mesh checks file existence before building. Override with
# `-n0` for serial runs when debugging (live INFO logs interleave under -n auto).
addopts = "-n auto"
